NOD-690: update open-api and swagger info
